# supervisor

./: CMakeLists.txt  filename.json  mav.parm  mav.tlog  mav.tlog.raw  package.xml  plots.ipynb
.ipynb_checkpoints/: plots-checkpoint.ipynb
backup/: offb_node4.py
data/: drone_data.csv  drone_data_2023-03-30_11-38-51.csv  drone_data_2023-03-30_11-40-10.csv  drone_data_2023-03-30_11-42-47.csv  drone_data_2023-03-30_11-43-58.csv  drone_data_2023-03-30_11-44-34.csv  drone_data_2023-03-30_11-46-00.csv  drone_data_2023-03-30_11-51-11.csv  drone_data_2023-03-30_11-58-36.csv  drone_data_2023-03-30_12-01-04.csv  drone_data_2023-03-30_12-01-35.csv  drone_data_2023-03-30_12-02-16.csv  svg.py
docs/: ros_info.md  running.md
launch/: start_offb.launch
msg/: DataLogger.msg  FourFloats.msg
scripts/: assessment.py  config.py  dataLog.py  data_logger.py  data_logger_node.py  euler.py  fesupervisor.py  flight_envelope_assessment.py  flight_envelope_supervisor.py  helper_functions.py  injection.py  logger.py  main copy.py  main.py  offb_node.py  offb_node2.py  offb_node3.py  offb_node4.py  offb_node5.py  paramtest.py  scrap.py  set_attitude.py
scripts/.ipynb_checkpoints/: testing-checkpoint.ipynb
shell_scripts/: jordans_supervisor.sh  run.sh  stop.sh  tmux.sh
