<?xml version="1.0"?>
<package format="2">
  <name>offboard_py</name>
  <version>0.0.0</version>
  <description>The offboard_py package</description>

  <maintainer email="jordan.taranto@umkc.edu">taranto</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <export>
  </export>
</package>
